--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'maven-publish'
 
 version = '1.0.0'
 group = 'io.github.UpcraftLP' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'RandomLootCrates'
+archivesBaseName = 'RandomLootCrates-Forge'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = JavaVersion.VERSION_1_8 // Need this here so eclipse task generates correctly.
 
